--- a/weather01.html
+++ b/weather01.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Weather</title>
-    <link rel="icon" href="./images/hiclipart.com (3).png" type="image/icon">
+    <link rel="icon" href="hiclipart.com (3).png" type="image/icon">
     <link rel="stylesheet" href="weather01.css">
 </head>
 
@@ -50,7 +50,7 @@
     <footer>
         <p>&copy; Alex 2020</p>
     </footer>
-    <script src="./weather.js"></script>
+    <script src="weather.js"></script>
     
 </body>
 
