changed background and weather details style

--- a/index.html
+++ b/index.html
@@ -30,19 +30,17 @@
 
             <div id="info">
                 <div id="cities"> 
-                    <li class="default_cities" id="beijing_city" > Beijing</li>
-                    <li class="default_cities" id="newyork_city"> New York</li>
-                    <li class="default_cities" id="tokyo_city"> Tokyo</li>
-                    <li class="default_cities" id="moscow_city"> Moscow</li>
+                    <li class="default_cities" id="beijing_city" ><p>Beijing</p></li>
+                    <li class="default_cities" id="newyork_city"><p> New York</p></li>
+                    <li class="default_cities" id="tokyo_city"><p>Tokyo</p></li>
+                    <li class="default_cities" id="moscow_city"><p>moscow</p></li>
                 </div>
                 
                 <div id="weather_details_container">
-                    <h3 id="weather_details_header">weather details</h3>
                     <div id="weather_details_content"> 
-                        <li class="weather_details" id="humidity">humidity</li>
+                        <li class="weather_details" id="humidity"><p>humidity</p></li>
                         <li class="weather_details" id="presure">presure</li>
                         <li class="weather_details" id="visibility">visibility</li> 
-                        <li class="weather_details" id="weather_description">weather description</li> 
                         <li class="weather_details" id="wind"> wind</li> 
                         <li class="weather_details" id="temp_min">min temp</li>
                         <li class="weather_details" id="temp_max">max temp</li>
