positioned default cities, styled from zero week weather temps and main info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Weather</title>
     <link rel="icon" href="./assets/icons/cloudy.svg" type="image/icon">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <script src="./js/script.js" defer></script> -->
+    <script src="./js/script.js" defer></script>
 </head>
 
 <body>
@@ -15,11 +15,7 @@
         <!-- MAIN weather info -->
         <article id="main-content-container">
             <div id="main-temp-container">
-                <svg width="15" height="15" viewBox="0 0 15 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                        fill="#1B1B1B" />
-                </svg>
+                <span class="celcius"></span>
                 <p id="main-temp">20</p>
             </div>
 
@@ -31,16 +27,12 @@
 
 
             <div id="feels-like-container">
-                <svg width="15" height="15" viewBox="0 0 15 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                        fill="#1B1B1B" />
-                </svg>
+                <span class="celcius"></span>
                 <p id="feels-like-temp">18</p>
                 <p id="feels-like-text">feels like</p>
             </div>
 
-            <div id="local-date">
+            <div id="local-date-container">
                 <span id="time">21:30</span>
                 <p id="week-day">thursday</p>
                 <p>local time</p>
@@ -49,7 +41,6 @@
             <div id="weather-detail-button">
                 <p>weather details</p>
             </div>
-
         </article>
 
         <aside id="side-content-container">
@@ -86,12 +77,6 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">15</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
                                     </span>
                                 </div>
                                 <p>monday</p>
@@ -100,12 +85,7 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">17</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
+
                                     </span>
                                 </div>
                                 <p>tuesday</p>
@@ -114,12 +94,7 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">16</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
+
                                     </span>
                                 </div>
                                 <p>wednesday</p>
@@ -128,12 +103,7 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">19</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
+
                                     </span>
                                 </div>
                                 <p>thursday</p>
@@ -142,12 +112,7 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">23</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
+
                                     </span>
                                 </div>
                                 <p>friday</p>
@@ -156,12 +121,7 @@
                                 <div class="fetched-value-container">
                                     <div class="fetched-value">25</div>
                                     <span>
-                                        <svg width="15" height="15" viewBox="0 0 15 18" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                                                fill="#1B1B1B" />
-                                        </svg>
+
                                     </span>
                                 </div>
                                 <p>saturday</p>
