--- a/index.html
+++ b/index.html
@@ -136,55 +136,45 @@
 
 
     <!-- Wwather Detalis -->
-    <article class="hidden">
+    <article class="hidden swing-in-top-fwd " id="weather-details-container">
         <h2>weather details</h2>
-        <span id="exit-button"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+        <span id="exit-button"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 22L22 2" stroke="white" stroke-width="3" />
                 <path d="M2 2L22 22" stroke="white" stroke-width="3" />
             </svg>
         </span>
 
-        <div id="weather-details-container">
+        <div id="weather-details-content">
             <div class="weather-detail" id="humidity">
-                <span class="fetched-info">75</span>
-                <span class="unit">%</span>
+                <div class="fetched-info">75</div>
+                <span class="unit humidity">%</span>
                 <p class="detail-text">humidity</p>
             </div>
             <div class="weather-detail" id="presure">
-                <span class="fetched-info">1001</span>
-                <span class="unit">hpa</span>
+                <div class="fetched-info">1001</div>
+                <span class="unit presure">hpa</span>
                 <p class="detail-text">presure</p>
             </div>
             <div class="weather-detail" id="visibility">
-                <span class="fetched-info">10</span>
-                <span class="unit">+km</span>
+                <div class="fetched-info">10</div>
+                <span class="unit visibility">+km</span>
                 <p class="detail-text">visibility</p>
             </div>
             <div class="weather-detail" id="wind">
-                <span class="fetched-info"></span>
-                <span class="unit">kph</span>
-                <p class="detail-text">3.6</p>
+                <div class="fetched-info">3.6</div>
+                <span class="unit wind">kph</span>
+                <p class="detail-text">wind speed</p>
             </div>
             <div class="weather-detail" id="min-temp">
-                <span class="fetched-info">13</span>
-                <span class="unit">
-                    <svg width="15" height="15" viewBox="0 0 15 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                            fill="#1B1B1B" />
-                    </svg>
+                <div class="fetched-info">13</div>
+                <span class="unit celcius">
                 </span>
                 <p class="detail-text">min temp</p>
             </div>
             <div class="weather-detail" id="max-temp">
-                <span class="fetched-info">18</span>
-                <span class="unit">
-                    <svg width="15" height="15" viewBox="0 0 15 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0.157227 8.92871C0.157227 7.37598 0.464844 5.97949 1.08008 4.73926C1.69531 3.48926 2.55957 2.53223 3.67285 1.86816C4.78613 1.19434 6.06543 0.857422 7.51074 0.857422C9.64941 0.857422 11.3828 1.5459 12.7109 2.92285C14.0488 4.2998 14.7715 6.12598 14.8789 8.40137L14.8936 9.23633C14.8936 10.7988 14.5908 12.1953 13.9854 13.4258C13.3896 14.6562 12.5303 15.6084 11.4072 16.2822C10.2939 16.9561 9.00488 17.293 7.54004 17.293C5.30371 17.293 3.51172 16.5508 2.16406 15.0664C0.826172 13.5723 0.157227 11.585 0.157227 9.10449V8.92871ZM3.7168 9.23633C3.7168 10.8672 4.05371 12.1465 4.72754 13.0742C5.40137 13.9922 6.33887 14.4512 7.54004 14.4512C8.74121 14.4512 9.67383 13.9824 10.3379 13.0449C11.0117 12.1074 11.3486 10.7354 11.3486 8.92871C11.3486 7.32715 11.002 6.05762 10.3086 5.12012C9.625 4.18262 8.69238 3.71387 7.51074 3.71387C6.34863 3.71387 5.42578 4.17773 4.74219 5.10547C4.05859 6.02344 3.7168 7.40039 3.7168 9.23633Z"
-                            fill="#1B1B1B" />
-                    </svg>
+                <div class="fetched-info">18</div>
+                <span class="unit celcius">
                 </span>
                 <p class="detail-text">max temp</p>
             </div>
