set up in JS geolocation, time, date and attached fetched info to DOM

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         <article id="main-content-container">
             <div id="main-temp-container">
                 <span class="celcius"></span>
-                <p id="main-temp">20</p>
+                <p id="main-temp"></p>
             </div>
 
             <div id="city-weather-container">
                 <p id="weather-text">sunny</p>
                 <span>in</span>
-                <p id="city-name">tbilisi</p>
+                <p id="city-name"></p>
             </div>
 
 
             <div id="feels-like-container">
                 <span class="celcius"></span>
-                <p id="feels-like-temp">18</p>
+                <p id="feels-like-temp"></p>
                 <p id="feels-like-text">feels like</p>
             </div>
 
             <div id="local-date-container">
-                <span id="time">21:30</span>
-                <p id="week-day">thursday</p>
+                <span id="time"></span>
+                <p id="week-day"></p>
                 <p>local time</p>
             </div>
 
@@ -43,25 +43,25 @@
             </div>
         </article>
 
-        <aside id="side-content-container">
+        <aside id="side-content-container" class="">
             <!-- SEARCH -->
             <div id="input-section">
                 <input type="text" id="input" placeholder="Enter Location">
-                <button type="button" id="search" class="desktop-only">Search</button>
+                <button type="button" id="search" >Search</button>
             </div>
 
-            <!-- DEFAULT cities -->
             <div id="aside-content">
-                <div id="cities" class="desktop">
+                <!-- DEFAULT cities -->
+                <div id="cities">
                     <ul>
                         <li class="default-city" id="beijing-city">
-                            <p>Beijing</p>
+                            <p>beijing</p>
                         </li>
                         <li class="default-city" id="newyork-city">
-                            <p> New York</p>
+                            <p> new york</p>
                         </li>
                         <li class="default-city" id="tokyo-city">
-                            <p>Tokyo</p>
+                            <p>tokyo</p>
                         </li>
                         <li class="default-city" id="moscow-city">
                             <p>moscow</p>
@@ -146,35 +146,35 @@
         </span>
 
         <div id="weather-details-content">
-            <div class="weather-detail" id="humidity">
-                <div class="fetched-info">75</div>
+            <div class="weather-detail">
+                <div class="fetched-info" id="humidity"></div>
                 <span class="unit humidity">%</span>
                 <p class="detail-text">humidity</p>
             </div>
-            <div class="weather-detail" id="presure">
-                <div class="fetched-info">1001</div>
-                <span class="unit presure">hpa</span>
-                <p class="detail-text">presure</p>
+            <div class="weather-detail">
+                <div class="fetched-info" id="pressure"></div>
+                <span class="unit pressure">hpa</span>
+                <p class="detail-text">pressure</p>
             </div>
-            <div class="weather-detail" id="visibility">
-                <div class="fetched-info">10</div>
+            <div class="weather-detail">
+                <div class="fetched-info" id="visibility"></div>
                 <span class="unit visibility">+km</span>
                 <p class="detail-text">visibility</p>
             </div>
-            <div class="weather-detail" id="wind">
-                <div class="fetched-info">3.6</div>
+            <div class="weather-detail">
+                <div class="fetched-info" id="wind"></div>
                 <span class="unit wind">kph</span>
                 <p class="detail-text">wind speed</p>
             </div>
-            <div class="weather-detail" id="min-temp">
-                <div class="fetched-info">13</div>
+            <div class="weather-detail">
+                <div class="fetched-info" id="min-temp"></div>
                 <span class="unit celcius">
                 </span>
                 <p class="detail-text">min temp</p>
             </div>
-            <div class="weather-detail" id="max-temp">
-                <div class="fetched-info">18</div>
-                <span class="unit celcius">
+            <div class="weather-detail">
+                <div class=" fetched-info" id="max-temp"></div>
+                <span class=" unit celcius">
                 </span>
                 <p class="detail-text">max temp</p>
             </div>
