changed font and default info, added grid

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <article id="main-content-container">
             <div id="main-temp-container">
                 <span class="celcius"></span>
-                <p id="main-temp"></p>
+                <p id="main-temp">0</p>
             </div>
 
             <div id="city-weather-container">
                 <p id="weather-text">sunny</p>
                 <span>in</span>
-                <p id="city-name"></p>
+                <p id="city-name">city</p>
             </div>
 
 
             <div id="feels-like-container">
                 <span class="celcius"></span>
-                <p id="feels-like-temp"></p>
+                <p id="feels-like-temp">0</p>
                 <p id="feels-like-text">feels like</p>
             </div>
 
@@ -75,7 +75,7 @@
                         <ul>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">15</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
                                     </span>
                                 </div>
@@ -83,7 +83,7 @@
                             </li>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">17</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
 
                                     </span>
@@ -92,7 +92,7 @@
                             </li>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">16</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
 
                                     </span>
@@ -101,7 +101,7 @@
                             </li>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">19</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
 
                                     </span>
@@ -110,7 +110,7 @@
                             </li>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">23</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
 
                                     </span>
@@ -119,7 +119,7 @@
                             </li>
                             <li>
                                 <div class="fetched-value-container">
-                                    <div class="fetched-value">25</div>
+                                    <div class="fetched-value">0</div>
                                     <span>
 
                                     </span>
@@ -147,33 +147,33 @@
 
         <div id="weather-details-content">
             <div class="weather-detail">
-                <div class="fetched-info" id="humidity"></div>
+                <div class="fetched-info" id="humidity">0</div>
                 <span class="unit humidity">%</span>
                 <p class="detail-text">humidity</p>
             </div>
             <div class="weather-detail">
-                <div class="fetched-info" id="pressure"></div>
+                <div class="fetched-info" id="pressure">0</div>
                 <span class="unit pressure">hpa</span>
                 <p class="detail-text">pressure</p>
             </div>
             <div class="weather-detail">
-                <div class="fetched-info" id="visibility"></div>
+                <div class="fetched-info" id="visibility">0</div>
                 <span class="unit visibility">+km</span>
                 <p class="detail-text">visibility</p>
             </div>
             <div class="weather-detail">
-                <div class="fetched-info" id="wind"></div>
+                <div class="fetched-info" id="wind">0</div>
                 <span class="unit wind">kph</span>
                 <p class="detail-text">wind speed</p>
             </div>
             <div class="weather-detail">
-                <div class="fetched-info" id="min-temp"></div>
+                <div class="fetched-info" id="min-temp">0</div>
                 <span class="unit celcius">
                 </span>
                 <p class="detail-text">min temp</p>
             </div>
             <div class="weather-detail">
-                <div class=" fetched-info" id="max-temp"></div>
+                <div class=" fetched-info" id="max-temp">0</div>
                 <span class=" unit celcius">
                 </span>
                 <p class="detail-text">max temp</p>
