--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Weather</title>
     <link rel="icon" href="./assets/icons/cloudy.svg" type="image/icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js" defer></script>
 </head>
@@ -47,7 +49,7 @@
             <!-- SEARCH -->
             <div id="input-section">
                 <input type="text" id="input" placeholder="Enter Location">
-                <button type="button" id="search" >Search</button>
+                <button type="button" id="search">Search</button>
             </div>
 
             <div id="aside-content">
