added geolocation and week weather, tried media queries

--- a/index.html
+++ b/index.html
@@ -46,54 +46,61 @@
             <input type="text" id="input" placeholder="Enter Location">
             <button type="button" id="search">Search</button>
         </div>
+        <!-- WEEK weather -->
+        <div id="week-weather-container" class="">
+            <p>Week's Weather On My Location</p>
+            <ul>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>monday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>tuesday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>wednesday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>thursday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>friday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>saturday</p>
+                </li>
+                <li>
+                    <div class="fetched-value-container">
+                        <div class="fetched-value">0</div>
+                    </div>
+                    <p>sunday</p>
+                </li>
+            </ul>
+    
+    
+        </div>
     </section>
 
-    <!-- WEEK weather -->
-    <section id="week-weather-container" class="">
-        <ul>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">24</div>
-                </div>
-                <p>monday</p>
-            </li>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">20</div>
-                </div>
-                <p>tuesday</p>
-            </li>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">25</div>
-                </div>
-                <p>wednesday</p>
-            </li>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">21</div>
-                </div>
-                <p>thursday</p>
-            </li>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">28</div>
-                </div>
-                <p>friday</p>
-            </li>
-            <li>
-                <div class="fetched-value-container">
-                    <div class="fetched-value">30</div>
-                </div>
-                <p>saturday</p>
-            </li>
-        </ul>
 
 
-    </section>
-
-
-    <!-- Wwather Detalis -->
+    <!-- Weather Detalis -->
     <section class="hidden swing-in-top-fwd " id="weather-details-container">
         <h2>weather details</h2>
         <span id="exit-button"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
