finished, hope so

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button type="button" id="search">Search</button>
         </div>
         <!-- WEEK weather -->
-        <div id="week-weather-container" class="">
+        <div id="week-weather-container" class="swing-in-top-fwd">
             <p>Week's Weather On My Location</p>
             <ul>
                 <li>
