changed media queries for small screens

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h1>You Have App For That</h1>
     <!-- MAIN weather info -->
     <section id="main-content-container">
         <div id="main-temp-container">
