--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Weather</title>
-    <link rel="icon" href="./assets/icons/cloudy.svg" type="image/icon">
+    <link rel="icon" href="./assets/icons/cloudy_purple.svg" type="image/icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <h1>You Have App For That</h1>
     <!-- MAIN weather info -->
     <section id="main-content-container">
         <div id="main-temp-container">
@@ -47,7 +46,10 @@
             <input type="text" id="input" placeholder="Enter Location">
             <button type="button" id="search">Search</button>
         </div>
-        <!-- WEEK weather -->
+    </section>
+    
+    <!-- WEEK weather -->
+    <section>
         <div id="week-weather-container" class="swing-in-top-fwd">
             <p>Week's Weather On My Location</p>
             <ul>
@@ -99,15 +101,13 @@
         </div>
     </section>
 
-
-
     <!-- Weather Detalis -->
     <section class="hidden swing-in-top-fwd " id="weather-details-container">
         <h2>weather details</h2>
         <span id="exit-button"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
-                <path d="M2 22L22 2" stroke="#000000" stroke-width="3" />
-                <path d="M2 2L22 22" stroke="#000000" stroke-width="3" />
+                <path d="M2 22L22 2" stroke="#ffffff" stroke-width="3" />
+                <path d="M2 2L22 22" stroke="#ffffff" stroke-width="3" />
             </svg>
         </span>
 
