--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Weather</title>
-    <link rel="icon" href="./assets/icons/cloudy_purple.svg" type="image/icon">
+    <link rel="icon" href="./assets/icons/cloudy.svg" type="image/icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
