added self updating time stamp

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="local-date-container">
                     <div id="time"></div>
                     <p id="week-day"></p>
-                    <p>local time</p>
+                    <p>my local time</p>
                 </div>
             </div>
             <!-- SEARCH -->
